// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources with Region as CFN output 1`] = `
{
  "aws_project_region": "eu-west-2",
  "geo": {
    "amazon_location_service": {
      "geofenceCollections": {
        "default": "defaultCollection12345",
        "items": [
          "collection12345",
          "defaultCollection12345",
        ],
      },
      "maps": {
        "default": "defaultMap12345",
        "items": {
          "defaultMap12345": {
            "style": "VectorEsriStreets",
          },
          "map12345": {
            "style": "VectorEsriStreets",
          },
        },
      },
      "region": "eu-west-1",
      "search_indices": {
        "default": "defaultIndex12345",
        "items": [
          "index12345",
          "defaultIndex12345",
        ],
      },
    },
  },
}
`;

exports[`generate maps and search configuration generates correct configuration for maps and search geo resources without Region CFN output 1`] = `
{
  "aws_project_region": "us-west-2",
  "geo": {
    "amazon_location_service": {
      "geofenceCollections": {
        "default": "defaultCollection12345",
        "items": [
          "collection12345",
          "defaultCollection12345",
        ],
      },
      "maps": {
        "default": "defaultMap12345",
        "items": {
          "defaultMap12345": {
            "style": "VectorEsriStreets",
          },
          "map12345": {
            "style": "VectorEsriStreets",
          },
        },
      },
      "region": "us-west-2",
      "search_indices": {
        "default": "defaultIndex12345",
        "items": [
          "index12345",
          "defaultIndex12345",
        ],
      },
    },
  },
}
`;
